module-system/sov-modules-macros/tests/module_info/second_addr_not_supported.stderr
error: The `address` attribute is defined more than once, revisit field: address_2
 --> tests/module_info/second_addr_not_supported.rs:9:5
  |
9 |     address_2: C::Address,
  |     ^^^^^^^^^
